# data-agent

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  ENGINEERING.md  README.md  pyproject.toml
agent/: __init__.py  agent.py  answer_blocks.py  environment.py  events.py  llm.py  loaders.py  memory.py  prompts.py  response.py  sandbox.py  session.py  tools.py  validation.py
api/: datasets.py  main.py  sessions.py
data/ecommerce/: customers.csv  order_items.csv  orders.csv  products.csv  returns.csv
data/superstore/: orders.csv  returns.csv
docs/: AGENT_REDESIGN.md  API_DESIGN.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  UI_DESIGN.md
tests/: conftest.py  test_agent.py  test_answer_blocks.py  test_api.py  test_environment.py  test_events.py  test_llm.py  test_loaders.py  test_memory.py  test_package_exports.py  test_prompts.py  test_response.py  test_sandbox.py  test_session.py  test_tools.py  test_validation.py
tests/fixtures/: customers.csv  orders.csv  products.csv
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts  store.ts  types.ts
ui/src/__tests__/: analysis-block.test.tsx  api.test.ts  store.test.ts
ui/src/components/: AnalysisBlock.tsx  AnalysisStream.tsx  AnswerBlocks.tsx  ArtifactGrid.tsx  ArtifactOverlay.tsx  ChartArtifact.tsx  DataBar.tsx  DataPanel.tsx  DatasetCard.tsx  DropZone.tsx  Header.tsx  InputBar.tsx  Onboarding.tsx  ProcessSection.tsx  StatArtifact.tsx  Suggestions.tsx  TableArtifact.tsx
ui/src/styles/: index.css
